changed the install parameter

--- a/src/jobs/install.yml
+++ b/src/jobs/install.yml
@@ -12,4 +12,4 @@ parameters:
     type: string
 steps:
   - install:
-      to: << parameters.dotnet_version >>
+      dotnet_version: << parameters.dotnet_version >>
