--- a/src/commands/install.yml
+++ b/src/commands/install.yml
@@ -1,14 +1,22 @@
-description: "Install dotnet sdk"
+description: "Install .NET SDK and build app"
 
 parameters:
   dotnet_version:
     description: Select a specific version of the .NET Core framework.
     default: "3.1"
     type: string
+  app_directory:
+    description: Select a specific folder for publishing the app
+    default: "deployapp"
+    type: string
 steps:
   - run:
-      name: Install .NET core - <<parameters.dotnet_version>>
+      name: Install .NET core - <<parameters.dotnet_version>> 
       environment:
         PARAM_DOTNET_VERSION: <<parameters.dotnet_version>>
       command: <<include(scripts/install_dotnet.sh)>>
-
+  - run:
+      name: Install .NET core - <<parameters.dotnet_version>> 
+      environment:
+        PARAM_DOTNET_APP_DIRECTORY: <<parameters.app_directory>>
+      command: <<include(scripts/build_dotnet_app.sh.sh)>>
