[semver:patch] added checkout to install job

--- a/src/jobs/install.yml
+++ b/src/jobs/install.yml
@@ -15,6 +15,7 @@ parameters:
     default: "deployapp"
     type: string
 steps:
+  - checkout
   - install:
       dotnet_version: << parameters.dotnet_version >>
       app_directory: << parameters.app_directory >>
