--- a/src/jobs/install.yml
+++ b/src/jobs/install.yml
@@ -19,3 +19,7 @@ steps:
   - install:
       dotnet_version: << parameters.dotnet_version >>
       app_directory: << parameters.app_directory >>
+  - persist_to_workspace:
+          root: .
+          paths:
+            - .
