--- a/src/jobs/deploy.yml
+++ b/src/jobs/deploy.yml
@@ -6,20 +6,11 @@ description: >
 executor: default
 
 parameters:
-  dotnet_version:
-    description: Select a specific version of the .NET Core framework.
-    default: "3.1"
-    type: string
   app_directory:
     description: Select a specific folder for publishing the app
     default: "deployapp"
     type: string
 steps:
-  - install:
-      dotnet_version: << parameters.dotnet_version >>
+  - deploy:
       app_directory: << parameters.app_directory >>
-  - persist_to_workspace:
-          root: .
-          paths:
-            - .
 
